--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+img.fullwidth {
+  width: 100%;
+}
+img.left {
+  margin-right: auto;
+}
+img.right {
+  margin-left: auto;
+}
